Scrollbar postion fix

--- a/src/components/App/AppStyles.less
+++ b/src/components/App/AppStyles.less
@@ -9,6 +9,7 @@ body {
   justify-content: center;
   text-align: center;
   color: #33333d;
+  position: absolute;
   // align-items: center;
   // height: 100vh;
   #root {
